--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "mocha"
   },
   "dependencies": {
     "bcrypt": "^3.0.6",
@@ -13,9 +14,11 @@
     "debug": "~2.2.0",
     "dotenv": "^8.0.0",
     "express": "~4.14.0",
+    "mocha": "^6.1.4",
     "mongoose": "^5.5.11",
     "morgan": "~1.7.0",
     "pug": "~2.0.0-beta6",
-    "serve-favicon": "^2.3.2"
+    "serve-favicon": "^2.3.2",
+    "supertest": "^4.0.2"
   }
 }
